--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,9 +1,13 @@
 @charset "UTF-8";
 
+/* PC */
 
-@media screen and (min-width: 961px){
-
-  .Q1__box {
+.clearfix::after {
+  content: " ";
+  display: block;
+  clear: both;
+}
+.Q1__box {
   width: 400px;
   height: 400px;
   background-color: #ff0000;
@@ -33,7 +37,6 @@
 }
 .float-box {
   width: 600px;
-  height: 300px;
   margin: 0 auto;
 }
 .Q4-box1 {
@@ -50,13 +53,19 @@
   background-color: #0008ff;
 }
 .flex__box1,.flex__box2,.display-box {
+  flex-direction: row;
   display: flex;
+}
+.text__box {
+  display: table;
   text-align: center;
 }
 li {
   width: 300px;
   height: 300px;
-  line-height: 300px;
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
 }
 li:first-child {
   margin-left: auto;
@@ -77,12 +86,16 @@ li:last-child {
 
 .green-box {
   background-color: #00ff51;
+  vertical-align: middle;
+  order: 1;
 }
 .yerrow-box {
   background-color: #d4ff00;
+  order: 2;
 }
 .pink-box {
   background-color: #ff00e1;
+  order: 3;
 }
 .blue2-box {
   background-color: #0008ff;
@@ -95,9 +108,15 @@ li:last-child {
   background-color: #00ff51;
 }
 
+/* スマホ・タブレット */
+@media screen and (max-width: 960px){
+
+.clearfix::after {
+  content: " ";
+  display: block;
+  clear: both;
 }
 
-@media screen and (max-width: 960px){
 .Q1__box {
   width: 200px;
   height: 200px;
@@ -140,31 +159,34 @@ li:last-child {
 }
 .float-box {
   width: 300px;
-  height: 600px;
 }
 .Q4-box1 {
   float: none;
   width: 300px;
   height: 300px;
   background-color: #ff0000;
-  display: inline-block;
 }
 .Q4-box2 {
   float: none;
   width: 300px;
   height: 300px;
   background-color: #0008ff;
-  display: inline-block;
 }
 .flex__box1 {
   display: flex;
   flex-direction: row-reverse;
   text-align: center;
 }
+.text__box {
+  display: table;
+  text-align: center;
+}
 li {
   width: 300px;
   height: 300px;
-  line-height: 300px;
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
 }
 li:first-child {
   margin-left: auto;
@@ -204,6 +226,7 @@ li:last-child {
 }
 .blue2-box {
   background-color: #0008ff;
+  display: block;
 }
 .red2-box {
   background-color: #ff0000;
