--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,6 +2,7 @@
 
 /* PC */
 
+
 .clearfix::after {
   content: " ";
   display: block;
@@ -56,6 +57,8 @@
   flex-direction: row;
   display: flex;
   text-align: center;
+  align-items: center;
+  justify-content: center;
 }
 li {
   width: 300px;
@@ -64,12 +67,6 @@ li {
   text-align: center;
   align-items: center;
   justify-content: center;
-}
-li:first-child {
-  margin-left: auto;
-}
-li:last-child {
-  margin-right: auto;
 }
 
 .red-box {
@@ -173,7 +170,7 @@ li:last-child {
 .flex__box1 {
   display: flex;
   flex-direction: row-reverse;
-  text-align: center;
+  justify-content: center;
 }
 li {
   width: 300px;
@@ -183,13 +180,6 @@ li {
   justify-content: center;
   text-align: center;
 }
-li:first-child {
-  margin-left: auto;
-}
-li:last-child {
-  margin-right: auto;
-}
-
 .red-box {
   background-color: #ff0000;
 }
@@ -202,6 +192,7 @@ li:last-child {
 .flex__box2 {
   display: flex;
   text-align: center;
+  justify-content: center;
 }
 .green-box {
   background-color: #00ff51;
@@ -231,5 +222,3 @@ li:last-child {
   background-color: #00ff51;
 }
 }
-
-
